...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import com.gzaber.keepnote.R
import com.gzaber.keepnote.ui.theme.KeepNoteTheme

const val TITLE_TEXT_FIELD_TAG = "titleTextFieldTag"
const val CONTENT_TEXT_FIELD_TAG = "contentTextFieldTag"

@Composable
fun AddEditElementContent(
    isNote: Boolean,
    contentPadding: PaddingValues,
    title: String,
...
