...
import com.gzaber.keepnote.ui.theme.ColorSelectorColor5
import com.gzaber.keepnote.ui.theme.ColorSelectorColor6
import com.gzaber.keepnote.ui.theme.KeepNoteTheme


const val COLOR_CIRCLE_TAG = "colorCircleTag"
const val COLOR_SELECTOR_TAG = "colorSelectorTag"

@Composable
fun ColorCircle(
    isSelected: Boolean,
    color: Color,
    onClick: (Color) -> Unit,
...
